--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -7,5 +7,8 @@
 {% block body %}
 
     <div>{{ entry|safe }}</div>
+    <form action="{% url 'edit' title=title %}">
+        <button type="submit">Edit page</button>
+    </form>
 
 {% endblock %}
